--- a/design/resume.css
+++ b/design/resume.css
@@ -30,7 +30,7 @@ body {
 .secondary-container {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     flex-wrap: nowrap;
 }
 
@@ -39,61 +39,61 @@ body {
     font-size: 20px;
 }
 
-.profile{
-     display: flex;
+.profile {
+    display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     margin: 5px;
 }
 
 .Profile-btn {
-
     padding: 10px;
     margin: 5px;
-    background-color: transparent   ;
+    background-color: transparent;
     color: white;
-    text-align:     center  ;
-    font-size:  1pc;
-
+    text-align: center;
+    font-size: 1pc;
 }
 
-
-.header{
-
+.header {
     overflow: hidden;
     background-color: rgba(44, 46, 51, 0.7);
     padding: 30px;
 }
 
-.header-right{
-
+.header-right {
     float: right;
 }
 
-.header-right a{
-
+.header-right a {
     color: white;
     text-align: center;
     padding: 15px;
     margin: 10px;
     transition-delay: 0.2s;
-
 }
 
-.header-right a:hover{
-
+.header-right a:hover {
     cursor: pointer;
     background-color: dodgerblue;
-
 }
 
-@media screen and (max-width: 500px){
-
-    .header-right{
+@media screen and (max-width: 500px) {
+    .header-right {
         float: none;
     }
-    .header-right a{
+    .header-right a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
 
+@media screen and (min-width: 200px) {
+    .header-right {
+        float: none;
+    }
+    .header-right a {
         float: none;
         display: block;
         text-align: left;
