--- a/design/resume.css
+++ b/design/resume.css
@@ -89,13 +89,8 @@ body {
     }
 }
 
-@media screen and (min-width: 200px) {
-    .header-right {
-        float: none;
-    }
-    .header-right a {
-        float: none;
-        display: block;
-        text-align: left;
+@media screen and (min-width: 100px) {
+    .body{
+        height: 100%;
     }
 }
