--- a/design/resume.css
+++ b/design/resume.css
@@ -12,6 +12,7 @@ body {
     background-image: url("light1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: left;
 }
 
 .primary-container {
