--- a/design/resume.css
+++ b/design/resume.css
@@ -1,130 +1,139 @@
 *,
- ::before,
+::before,
 ::after {
-    font-family: 'Birthstone', cursive;
-    /*font-family: 'Gemunu Libre', sans-serif;*/
+  /* font-family: 'Birthstone', cursive; */
+  font-family: "Gemunu Libre", sans-serif;
 }
 
 body {
-    max-width: 500%;
-    height: 100%;
-    box-sizing: border-box;
-    background-image: url("light1.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left;
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+}
+#header {
+  color: #f2f2f2;
+  background-image: url(./background2.jpg);
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: darken;
 }
 
-.primary-container {
+.navbar a:hover {
+  color: white;
+  text-decoration: underline;
+  border: 1px rgba(10, 59, 218, 0.8);
+  border-style: dotted dashed solid double;
+  border-radius: 1em;
+  border-collapse: collapse;
+}
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    margin: 20px;
-    padding-top: 250px;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-container {
+  padding-left: 2pc;
+  margin-top: 5pc;
+  background-color: rgba(51, 77, 76, 0.1);
+}
+
+#footer {
+  padding-left: 2pc;
+  margin:10px;
+  background-color: rgba(51, 77, 76, 0.2);
+}
+.connect {
+  
+  
+    width: 50%;
+    float: left;
+    padding: 10px;
+}
+
+
+.colorStyle {
+  background-color: rgba(51, 77, 76, 0.3);
+  background-blend-mode: hue;
+  font-weight: bold;
 }
 
 .h2-name-tag {
-    color: black;
-    font-size: 4pc;
-}
-
-.secondary-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    margin: 30px;
+  font-size: 𝟮pc;
 }
 
 .h2-details-tag {
-    color: black;
-    font-size: 20px;
+  font-size: 20px;
 }
 
-.profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px;
+.article-section {
+  margin: 10px;
+  width: 410px;
+  font-size: 20px;
+  text-align: left;
+  overflow: hidden;
+  word-wrap: break-word;
+  word-break: keep-all;
+}
+.skill {
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+  margin: 20px;
+  box-shadow: 20px 20px 10px grey;
+  overflow: hidden;
+}
+.skill:hover {
+  transform: rotateY(30deg);
 }
 
-.Profile-btn {
-    padding: 10px;
-    margin: 5px;
-    background-color: transparent;
-    color: black;
-    text-align: center;
-    font-size: 1pc;
+.form-section {
+  padding: 50px;
 }
 
-.header {
-    overflow: hidden;
-    background-color: rgba(225, 225, 225, 0.4);
-    padding: 30px;
-    position: fixed;
-    top: 0;
-    width: 98%;
-    transition: 0.2s;
-    font-size: 20px;
-
+.form-section h2 {
+  font-size: 36px;
+  margin-bottom: 30px;
 }
 
-.header-right {
-    float: right;
+.form-section label {
+  /* display: block; */
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
-.header-right a {
-    color: black;
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-    transition-delay: 0.2s;
+input[type="email"],
+input[type="text"] {
+  box-sizing: border-box;
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  border-bottom: 1px solid red;
+  width: 40%;
+  padding: 5px 10px;
+  margin: 5px 10px;
 }
-
-.header-right a:hover {
-    cursor: pointer;
-    background-color: dodgerblue;
+#submit {
+  padding: 1em 3em;
+  margin: 3em 3em;
+  font-size: 0.8em;
+  font-weight: bold;
+  border-style: none;
+  outline: none;
+  border-radius: 1pc;
+  right: 10px;
+  box-shadow: 0 3px #666;
+  transform: translateY(2px);
 }
-
-.about-container{
-    margin: 700px;
-    padding: 50px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-      
-}
-.article-section{
-    position: relative;
-    /* right: 50px; */
-    color: black;
-    width: 410px;
-    font-size: 20px;
-    text-align: left;
-    text-overflow: ellipsis;
-    word-wrap: break-word;
-    word-break: keep-all;
-}
-
-
-@media screen and (max-width: 400px) {
-    .header-right {
-        float: none;
-    }
-    .header-right a {
-        float: none;
-        display: block;
-        text-align: left;
-        height: 100%;
-    }
-
-}
-
-@media screen and (min-width: 401px) {
-    .body{
-        height: 100%;
-    }
+#submit:hover {
+  background-color: rgba(12, 247, 82, 0.7);
 }
